# Karmazyn

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD
CMake/: CEGUIConfig.cmake  SFMLConfig.cmake  UsedMacros.cmake
Docs/: Notes
Karmazyn/: Application.cpp  Application.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  GameEngine.cpp  GameEngine.hpp  GameStateMachine.cpp  GameStateMachine.hpp  GameStateStack.cpp  GameStateStack.hpp  Globals.hpp  Karmazyn.cpp  Karmazyn.h  SFMLConfig.cmake  stdafx.h
Karmazyn/AssetManager/: AssetManager.cpp  AssetManager.hpp
Karmazyn/CMake/: SFMLConfig.cmake
Karmazyn/GUI/Button/: Button.hpp
Karmazyn/GUIManager/: GUIManager.cpp  GUIManager.hpp
Karmazyn/GameState/: GameStateMenu.cpp  GameStateMenu.hpp  GameState_Blank.hpp  GameState_LoadingMenu.cpp  GameState_LoadingMenu.hpp  GameState_MainMenu.cpp  GameState_MainMenu.hpp  IGameState.cpp  IGameState.hpp
Karmazyn/GameState/Game/: GameState_Game.cpp  GameState_Game.hpp
Karmazyn/GameState/LoadingMenu/: GameState_LoadingMenu.cpp  GameState_LoadingMenu.hpp
Karmazyn/GameState/MainMenu/: GameState_MainMenu.cpp  GameState_MainMenu.hpp
Karmazyn/RenderWindow/: RenderWindow.cpp  RenderWindow.hpp
Karmazyn/UIManager/: IUIState.cpp  IUIState.hpp  UIManager.cpp  UIManager.hpp  UIState_Blank.hpp
Karmazyn/UIManager/LoadingMenu/: UIState_LoadingMenu.cpp  UIState_LoadingMenu.hpp
Karmazyn/UIManager/MainMenu/: UIState_MainMenu.cpp  UIState_MainMenu.hpp
Libs/: Config  Config.cpp  Config.hpp  ConfigList.hpp  LibSettings.hpp  Logger.cpp  Logger.h  Logger.hpp  Logging
